TinyMUX 2.1:  CHANGES
Last Update:  April 2003

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- Signals SIGTERM and SIGUSR2 have been swapped. SIGTERM now performs a
    @shutdown, and SIGUSR2 drops a .SIG flatfile.
 -- Removed support for VMS, for the port concentrator.
 -- Removed support for many older mail, comsys, and flatfile formats
    related to Pern, MUD, MUSH, and Penn.
 -- dbconvert now only support three options: Load, Unload, and Check.
 -- It became necessary to move the flag letters for WOD_REALMS into
    the '0' to '9' range. Flatfiles are still compatible, but softcode
    that uses orflags(), andflags(), and flags() could be affected.
    

Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Support and favor %x ANSI substitutions over %c ANSI substitutions,
    but both are recognized.
 -- Changed PORTS() function to allow a player to get their own port number.
 -- Evaluating comtitles.
 -- comtitle/on and comtitle/off.
 -- LASTIP saves the numerical IP address from the players connection.
 -- @wait/until allows one to give an absolute time stamp.
 -- @wait and @wait/until support fractional seconds (eg. @wait 1.5=<cmd>).
 -- Added command access for UNINSPECTED and NO_UNINSPECTED.
 -- Added %m for 'lastcommand'. Equivalent to %c in MUSH.
 -- Exits can be teleported from room to room instead of taken and dropped.
 -- Added generalized article guessing (see art() and article_rule).
 -- Support 36 global registers instead of 10.
 -- Add TIMEFMT() function.
 -- Added null() and @@(). The former evaluates. The latter doesn't.
 -- Added GetFromLock. Patch from Draken-Korin.
 -- Added autozone configuration option (Bug #194 and Bug #635).
 -- Add CREATED attribute (Bug #555 and #608). Patch from Jake.
 -- Added /instant switch to @destroy. Patch from Jake.
 -- Added ability to turn off automatic execution of STARTUP attributes from