@@ -1,5 +1,5 @@
 TinyMUX 2.1:  CHANGES
-Last Update:  April 2003
+Last Update:  July 2003
 
 Major changes that may affect performance and require softcode tweaks:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -416,6 +416,8 @@ Performance Enhancements:
  -- If a Guest<n> player was renamed, the contents of room #0 would be
     cleared leaving @dbck to clean it up.
  -- Tweak the article_rule configuration options.  Reported by Alierak.
+ -- A look at a player could show their description without showing their
+    name.  Patch by Sean Hunter.
 
 
 Cosmetic Changes:
